[tool.poetry]
name = "discordbottemplate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
replit = "^2.0.0"
python-dotenv = "^0.15.0"
termcolor = "^1.1.0"
discord = "^2.1.0"
google-search = "^1.1.1"
googletrans = "^3.0.0"
psutil = "^5.9.4"
robloxapi = "^4.7"
youtube_dl = "^2021.12.17"
PyDictionary = "^2.0.1"
animec = "^0.4.2"
openai = "^0.27.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
